crates/aranya-policy-compiler/tests/data/facts/nonexistent_key_invalid_fact_literal.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: fact literal does not match definition: The number of Fact keys don't match the definition
  |
1 | fact Foo[i int] => {a string}
  | ----------------------------- definition has 1 keys but the expression has 2 keys
2 | action test() {
3 |     check exists Foo[i:0, j:1]
  |                      ^^^^^^^^ The number of Fact keys don't match the definition
